Hello World Commit by ndb796

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -20,9 +20,9 @@
             <SearchView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingRight="20dp"
-                android:paddingLeft="10dp"
-                android:queryHint="버스 검색"></SearchView>
+                android:paddingRight="10dp"
+                android:queryHint="버스 검색"
+                android:layout_alignParentRight="true"></SearchView>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
