--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -22,9 +22,21 @@
                 android:layout_height="match_parent"
                 android:paddingRight="10dp"
                 android:queryHint="버스 검색"
-                android:layout_alignParentRight="true"></SearchView>
-        </android.support.v7.widget.Toolbar>
+                android:layout_alignParentRight="true">
 
+            </SearchView>
+
+
+
+
+        </android.support.v7.widget.Toolbar>
+        <Button
+            android:id="@+id/bus_search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="버스검색" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.FloatingActionButton
